@@ -14,6 +14,8 @@
     <junit.version>5.10.0</junit.version>
     <javafx.version>17.0.14</javafx.version>
     <mysql.connector.version>8.0.28</mysql.connector.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -105,7 +107,11 @@
       <version>0.3.12</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>17.0.14</version> <!-- Or your JavaFX version -->
+    </dependency>
     <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>itextpdf</artifactId>
@@ -123,20 +129,34 @@
       <artifactId>mxnet-engine</artifactId>
       <version>0.25.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.stripe</groupId>
+      <artifactId>stripe-java</artifactId>
+      <version>23.7.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
     <plugins>
+      <!-- JavaFX Maven Plugin -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
-          <compilerArgs>
-            <arg>-Xlint:all</arg>
-          </compilerArgs>
+          <mainClass>Main</mainClass>
+          <executable>C:/Program Files/Java/jdk-17/bin/java</executable>
+          <options>
+            <option>--module-path</option>
+            <!--suppress UnresolvedMavenProperty -->
+            <option>${env.JAVAFX_HOME}/lib</option>
+            <option>--add-modules</option>
+            <option>javafx.controls,javafx.fxml,javafx.web</option>
+            <option>--add-exports</option>
+            <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+          </options>
         </configuration>
       </plugin>
 
